  ConnectionPoolInstanceMonitor refactored and moved to common.db.pool.monitor, home sweet home
  User moved from common.db to common.model
  EntityDbUtil removed, code moved to common.db.SQLUtil
  EntityDbUtil.getInsertProperties() and getUpdateProperties() moved to EntityDbConnection
  common.db.criteria.CriteriaValueProvider interface added
  Criteria.asString(), added CriteriaValueProvider parameter
  CriteriaValueProvider moved and renamed to Criteria.ValueProvider
  Criteria.ValueProvider.getSQLStringValue() renamed to getSQLString()
  ConnectionPoolMonitor renamed to PoolMonitor
  ConnectionPoolMonitorPanel renamed to PoolMonitorPanel
  ConnectionPoolInstanceMonitor renamed to ConnectionPoolMonitor
  ConnectionPoolInstanceMonitorPanel renamed to ConnectionPoolMonitorPanel
0.5.3
  ValueMapModel refactored from Entity and Entity.Key
  Entity.StringProvider moved to common.model
  ChangeValueMap aded
  ValueMapModelTest added
  LoadTestModel.updateTimer and updateInterval fields added
  EntityListModelTest added
  PropertyEditPanel.InputManager renamed to InputValueProvider and moved to common.ui.input (along with descendants)
  ValueListProvider added to common.model
  PropertyValueListProvider added
  EntityUiUtil.addLookupDialog() moved to UiUtil
  ValueMap, ChangeValueMap, ValueMapModel, ValueProvider and StringProvider generified
  Entity changed accordingly
  Entity.properties cache field added
  RandomItemModel generified
  LoadTestModel changed accordingly
  BoundedRandomItemModel generified
  ValueListProvider generified
  PropertyValueListProvider changed accordingly
  AbstractPropertyLink generified
  InputValueProvider generified
  InputValueProvider descendant unit tests added
  RandomItemPanel generified
  EntityLoadTestModelTest now shows a LoadTestPanel frame
  ClientMonitor finished, HostMonitor improved
  EntityDbRemoteServerAdmin getClients() overloaded